# mateo-hacs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  spec.md  tasks.md
.github/workflows/: ci.yml  hacs.yaml  hassfest.yaml
custom_components/: __init__.py
custom_components/mateo_meals/: __init__.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/mateo_meals/translations/: en.json  sv.json
scripts/: reset_ha_dev.sh  run_ha_dev.sh
tests/: conftest.py  test_additional_coverage.py  test_calendar_and_daysensors.py  test_config_flow.py  test_coordinator.py  test_import_debug.py  test_sensor.py
